force-app/main/default/objects/Ladepunkt__c/Ladepunkt__c.object-meta.xml
<CustomObject>
    <description>A single charge point. The unit that German metrology law actually regulates: the Eichfrist, the BNetzA notification duty and the THG claim all attach here, not to the site. Public accessibility is stored as a transition rather than an attribute, because LSV § 4 last sentence restarts the notification duties on the day an existing point becomes public.</description>
    <label>Ladepunkt</label>
    <nameField>
        <displayFormat>LP-{00000}</displayFormat>
        <label>Ladepunkt-Nr.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ladepunkte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>