force-app/main/default/objects/Ladepunkt__c/fields/Abweichung__c.field-meta.xml
<CustomField>
    <fullName>Abweichung__c</fullName>
    <description>Set by the batch when the engine and the formula field disagree. Twelve fixtures prove the two layers agree in EichrechtKonsistenzTest; this makes the same question answerable across the whole fleet, as a column somebody can sort by. Every checked row is either a case the declarative layer cannot express - the backdating of a late Nacheichung - or a defect.</description>
    <label>Formel weicht ab</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>