force-app/main/default/objects/Ladepunkt__c/fields/Betreiber__c.field-meta.xml
<CustomField>
    <fullName>Betreiber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Operator of the charge point - the Ladepunktbetreiber in the sense of Art. 2 No. 39 of Regulation (EU) 2023/1804, which is who the LSV § 4 notification duty and the THG claim under § 6 of the 38. BImSchV attach to. Not necessarily the site owner and not necessarily the reseller who installed it.</description>
    <label>Betreiber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ladepunkte</relationshipLabel>
    <relationshipName>Ladepunkte</relationshipName>
    <type>Lookup</type>
</CustomField>