force-app/main/default/objects/Ladepunkt__c/fields/BNetzA_Anzeige_am__c.field-meta.xml
<CustomField>
    <fullName>BNetzA_Anzeige_am__c</fullName>
    <description>Date the commissioning was notified to the Bundesnetzagentur. LSV § 4 Abs. 1 requires it within two weeks; decommissioning and a change of operator must be notified unverzueglich, and on a change of operator BOTH the old and the new operator notify. § 6 LSV then forwards the register data monthly to the Land metrology authorities, so this entry is not a private act.</description>
    <label>BNetzA-Anzeige am</label>
    <type>Date</type>
</CustomField>