force-app/main/default/objects/Ladepunkt__c/fields/BNetzA_veroeffentlicht__c.field-meta.xml
<CustomField>
    <fullName>BNetzA_veroeffentlicht__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the BNetzA has PUBLISHED the point, not merely received the notification. § 6 Abs. 3 Nr. 1 of the 38. BImSchV makes publication - or the operator consenting to publication - a condition of the THG claim. The publication lag is undocumented, which is why the consent alternative matters.</description>
    <label>BNetzA veröffentlicht</label>
    <type>Checkbox</type>
</CustomField>