force-app/main/default/objects/Ladepunkt__c/fields/Datenquelle__c.field-meta.xml
<CustomField>
    <fullName>Datenquelle__c</fullName>
    <description>Where this charge point came from. The distinction matters for the compliance answer rather than for bookkeeping: a record imported from a CPO backend carries no Inverkehrbringen and no calibration date, because OCPI does not model them - so an imported fleet is UNBEKANNT until somebody supplies what German metrology law needs and OCPI never had.</description>
    <label>Datenquelle</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Manuell</fullName><default>true</default><label>Manuell</label></value>
            <value><fullName>OCPI</fullName><default>false</default><label>OCPI</label></value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>