force-app/main/default/objects/Ladepunkt__c/fields/EVSE_ID__c.field-meta.xml
<CustomField>
    <fullName>EVSE_ID__c</fullName>
    <description>The individual identification code under Art. 20 Abs. 1 Satz 2 of Regulation (EU) 2023/1804. Mandatory per charge point for the THG filing (Bekanntmachung BAnz AT 30.06.2026 B9) but only optional in the BNetzA register - and the regulator&apos;s own example omits the E segment the metrology-quota authority requires. Follow DIN SPEC 91286 and keep the E: DE*ABC*E12345678. Traegt zusaetzlich den externen Schluessel des OCPI-Imports: der Ladepunkt wird darauf geupsertet, weil die EVSE-ID die einzige Kennung ist, die CPO-Backend und Eichrecht teilen. Ohne unique waere jeder naechtliche Import ein neuer Datensatz.</description>
    <externalId>true</externalId>
    <label>EVSE-ID</label>
    <length>40</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>