force-app/main/default/objects/Ladepunkt__c/fields/Fristbeginn__c.field-meta.xml
<CustomField>
    <fullName>Fristbeginn__c</fullName>
    <description>Start of the current calibration period, derived rather than typed. § 37 Abs. 1 Satz 2 MessEG starts it at Inverkehrbringen; § 34 Abs. 1 MessEV overrides that with the Tag der Eichung once the device has been re-calibrated. Two branches, one field, no data entry. The two harsher branches - a late Nacheichung backdating to the old period&apos;s end, and a device unused for over a year - need chronology and live in EichrechtService.</description>
    <formula>BLANKVALUE(Letzte_Eichung__c, Inverkehrbringen__c)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Fristbeginn</label>
    <type>Date</type>
</CustomField>