force-app/main/default/objects/Ladepunkt__c/fields/Inbetriebnahme__c.field-meta.xml
<CustomField>
    <fullName>Inbetriebnahme__c</fullName>
    <description>Commissioning date. Starts the two-week LSV § 4 clock for the BNetzA notification, and decides the AFIR Art. 5 payment obligation, which applies to points deployed from 13 April 2024. Not the same as Inverkehrbringen and not interchangeable with it.</description>
    <label>Inbetriebnahme</label>
    <type>Date</type>
</CustomField>