force-app/main/default/objects/Ladepunkt__c/fields/Inverkehrbringen__c.field-meta.xml
<CustomField>
    <fullName>Inverkehrbringen__c</fullName>
    <description>Date the device was placed on the market. Starts the FIRST Eichfrist under § 37 Abs. 1 Satz 2 MessEG - and only the first. After any Nacheichung the period restarts from the calibration day instead (§ 34 Abs. 1 MessEV), which is why this field alone cannot compute the expiry.</description>
    <label>Inverkehrbringen</label>
    <type>Date</type>
</CustomField>