force-app/main/default/objects/Ladepunkt__c/fields/Ladeleistung_kW__c.field-meta.xml
<CustomField>
    <fullName>Ladeleistung_kW__c</fullName>
    <description>Rated charging power. Carries three separate legal thresholds: above 4.2 kW a non-public point is a steuerbare Verbrauchseinrichtung under BK6-22-300; at 22 kW the BNetzA register switches it from Normal- to Schnellladepunkt; and at 50 kW AFIR Art. 5 stops accepting a QR code and demands a card reader or contactless.</description>
    <label>Ladeleistung (kW)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>