force-app/main/default/objects/Ladepunkt__c/fields/Letzte_Eichung__c.field-meta.xml
<CustomField>
    <fullName>Letzte_Eichung__c</fullName>
    <description>Date of the most recent re-calibration. This is the second branch of § 34 Abs. 1 MessEV: once a device has been nachgeeicht the next eight years run from the calibration day, not from Inverkehrbringen. MAX rather than a manually maintained field so it cannot drift from the underlying events.</description>
    <label>Letzte Eichung</label>
    <summarizedField>Eingriff__c.Datum__c</summarizedField>
    <summaryFilterItems>
        <field>Eingriff__c.Typ__c</field>
        <operation>equals</operation>
        <value>Nacheichung</value>
    </summaryFilterItems>
    <summaryForeignKey>Eingriff__c.Ladepunkt__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>