force-app/main/default/objects/Ladepunkt__c/fields/Letzte_Pruefung_am__c.field-meta.xml
<CustomField>
    <fullName>Letzte_Pruefung_am__c</fullName>
    <description>When the batch last evaluated this charge point. A stale timestamp means the sweep did not reach the record - which is a finding about the job, not about the charge point.</description>
    <label>Letzte Prüfung am</label>
    <type>DateTime</type>
</CustomField>