force-app/main/default/objects/Ladepunkt__c/fields/Letzter_beendender_Eingriff__c.field-meta.xml
<CustomField>
    <fullName>Letzter_beendender_Eingriff__c</fullName>
    <description>Date of the most recent event that terminated the Eichfrist early under § 37 Abs. 2 Nr. 2. Held as a date rather than a count so the parent formula can ask the only question that matters: did a re-calibration come AFTER it.</description>
    <label>Letzter beendender Eingriff</label>
    <summarizedField>Eingriff__c.Datum__c</summarizedField>
    <summaryFilterItems>
        <field>Eingriff__c.Beendet_Eichfrist__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Eingriff__c.Ladepunkt__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>