force-app/main/default/objects/Ladepunkt__c/fields/Nacheichung_beantragt_am__c.field-meta.xml
<CustomField>
    <fullName>Nacheichung_beantragt_am__c</fullName>
    <description>Date the re-calibration was applied for. § 38 MessEG is a grace period, not a deadline: applying at least ten weeks before expiry keeps the device legally equivalent to calibrated until the authority checks. Applying later leaves continued use to the authority - kann, not muss. Hence three states, not two.</description>
    <label>Nacheichung beantragt am</label>
    <type>Date</type>
</CustomField>