force-app/main/default/objects/Ladepunkt__c/fields/OCPI_Standort_ID__c.field-meta.xml
<CustomField>
    <fullName>OCPI_Standort_ID__c</fullName>
    <description>The Location id the EVSE belongs to in the CPO backend. OCPI nests EVSEs inside a Location, and keeping the parent id makes an import traceable back to what the CPO actually sent.</description>
    <label>OCPI-Standort-ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>