force-app/main/default/objects/Ladepunkt__c/fields/OCPI_Status__c.field-meta.xml
<CustomField>
    <fullName>OCPI_Status__c</fullName>
    <description>The operational EVSE status the CPO reports - AVAILABLE, CHARGING, OUTOFORDER and so on. Deliberately kept apart from Eichstatus__c: a charge point can be AVAILABLE and legally unusable at the same time, and conflating the two is exactly the mistake this project exists to avoid.</description>
    <label>OCPI-Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>