force-app/main/default/objects/Ladepunkt__c/fields/Oeffentlich_seit__c.field-meta.xml
<CustomField>
    <fullName>Oeffentlich_seit__c</fullName>
    <description>The date the point BECAME public. LSV § 4 Abs. 3: the notification duties apply afresh when an existing charge point newly becomes publicly accessible - so this is a transition, not an attribute, and the date is what the two-week clock runs from. A point that was public from the start carries the Inbetriebnahme date here.</description>
    <label>Öffentlich zugänglich seit</label>
    <type>Date</type>
</CustomField>