force-app/main/default/objects/Ladepunkt__c/fields/Oeffentlich_zugaenglich__c.field-meta.xml
<CustomField>
    <fullName>Oeffentlich_zugaenglich__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Publicly accessible in the sense of § 2 Nr. 2 LSV (new numbering since 1 January 2026, taken verbatim from AFIR). This single flag switches four regimes on - LSV notification, Eichrecht, AFIR and THG eligibility - and switches § 14a EnWG OFF, because the statute covers only nicht oeffentlich-zugaengliche Ladepunkte. Never edit it without setting Oeffentlich_seit__c.</description>
    <label>Öffentlich zugänglich</label>
    <type>Checkbox</type>
</CustomField>