force-app/main/default/objects/Ladepunkt__c/fields/Offene_Nacheichungsantraege__c.field-meta.xml
<CustomField>
    <fullName>Offene_Nacheichungsantraege__c</fullName>
    <description>Count of repairs where the re-calibration required by § 37 Abs. 5 Nr. 2 has not been applied for. The Eichfrist survives such a repair, but an application falls due unverzueglich - so this is an obligation counter, not a failure counter.</description>
    <label>Offene Nacheichungsanträge</label>
    <summaryFilterItems>
        <field>Eingriff__c.Nacheichungsantrag_offen__c</field>
        <operation>equals</operation>
        <value>true</value>
    </summaryFilterItems>
    <summaryForeignKey>Eingriff__c.Ladepunkt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>