force-app/main/default/objects/Ladepunkt__c/fields/Pruefergebnis__c.field-meta.xml
<CustomField>
    <fullName>Pruefergebnis__c</fullName>
    <description>The verdict EichrechtService reached the last time the nightly batch ran. Persisted rather than recomputed on read, because the engine walks an event history and a formula field cannot. This is the authoritative answer; Eichstatus__c is the one visible without Apex.</description>
    <label>Prüfergebnis (Engine)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>