force-app/main/default/objects/Ladepunkt__c/fields/Standort_Adresse__c.field-meta.xml
<CustomField>
    <fullName>Standort_Adresse__c</fullName>
    <description>Physical location. Kept as free text in this slice; the site object that will eventually own it (Ladestandort__c) is deliberately out of scope until the Eichrecht path is proven end to end.</description>
    <label>Standort</label>
    <type>TextArea</type>
</CustomField>