force-app/main/default/objects/Ladepunkt__c/fields/Stromart__c.field-meta.xml
<CustomField>
    <fullName>Stromart__c</fullName>
    <description>AC or DC. Deliberately recorded even though it does not change the Eichfrist - MessEV Anlage 7 Nr. 6.7 gives both eight years in a single entry, which is exactly why they are identical. It does change the cost and duration of the Nacheichung, and AFIR Art. 5(10) required a fixed cable on all public DC points from 14 April 2025.</description>
    <label>Stromart</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>