force-app/main/default/objects/Ladepunkt__c/fields/TEN_T_Netz__c.field-meta.xml
<CustomField>
    <fullName>TEN_T_Netz__c</fullName>
    <description>Whether the point sits on the trans-European transport network, which decides the 1 January 2027 AFIR retrofit duty for existing points at 50 kW and above. Art. 2(3) AFIR defines along as within 3 km DRIVING distance of the nearest exit - a routing computation, not a radius - so Unbekannt is a first-class value here and must be resolved by a human, never defaulted to Kein TEN-T.</description>
    <label>TEN-T-Netz</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TEN-T Kernnetz</fullName>
            </value>
            <value>
                <fullName>TEN-T Gesamtnetz</fullName>
            </value>
            <value>
                <fullName>Innerhalb 3 km Fahrstrecke</fullName>
            </value>
            <value>
                <fullName>Kein TEN-T</fullName>
            </value>
            <value>
                <fullName>Unbekannt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>