force-app/main/default/objects/Ladepunkt__c/fields/Zuletzt_importiert_am__c.field-meta.xml
<CustomField>
    <fullName>Zuletzt_importiert_am__c</fullName>
    <description>When the OCPI import last touched this record. A stale timestamp on a record the CPO stopped sending is itself a finding.</description>
    <label>Zuletzt importiert am</label>
    <type>DateTime</type>
</CustomField>