force-app/main/default/objects/Ladepunkt__c/listViews/Eichrechtstatus.listView-meta.xml
<ListView>
    <fullName>Eichrechtstatus</fullName>
    <columns>NAME</columns>
    <columns>Eichstatus__c</columns>
    <columns>Eichfrist_Ende__c</columns>
    <columns>Pruefergebnis__c</columns>
    <columns>Abweichung__c</columns>
    <columns>Datenquelle__c</columns>
    <columns>Ladeleistung_kW__c</columns>
    <columns>Betreiber__c</columns>
    <filterScope>Everything</filterScope>
    <label>Eichrechtstatus</label>
</ListView>