force-app/main/default/objects/Ladepunkt__c/listViews/Formel_weicht_ab.listView-meta.xml
<ListView>
    <fullName>Formel_weicht_ab</fullName>
    <columns>NAME</columns>
    <columns>Eichstatus__c</columns>
    <columns>Pruefergebnis__c</columns>
    <columns>Eichfrist_Ende__c</columns>
    <columns>Letzte_Pruefung_am__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Abweichung__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Formel weicht ab</label>
</ListView>