force-app/main/default/objects/Ladepunkt__c/listViews/Handlungsbedarf.listView-meta.xml
<ListView>
    <fullName>Handlungsbedarf</fullName>
    <columns>NAME</columns>
    <columns>Eichstatus__c</columns>
    <columns>Eichfrist_Ende__c</columns>
    <columns>Pruefergebnis__c</columns>
    <columns>Datenquelle__c</columns>
    <columns>Betreiber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Eichstatus__c</field>
        <operation>notEqual</operation>
        <value>GÜLTIG</value>
    </filters>
    <label>Handlungsbedarf</label>
</ListView>